[gd_scene load_steps=2 format=2]

[ext_resource path="res://console/Console.gd" type="Script" id=1]

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -629.0
margin_bottom = -500.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 395.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHeader" type="Label" parent="VBoxContainer"]
margin_right = 395.0
margin_bottom = 14.0
mouse_filter = 0
mouse_default_cursor_shape = 6
text = "ECS console"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 395.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPrint" type="Label" parent="VBoxContainer/ScrollContainer"]
margin_bottom = 99.0
text = "




"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 395.0
margin_bottom = 146.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 12.0
margin_bottom = 19.0
text = "> "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 395.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "COMMAND"
caret_blink = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 390.0
margin_top = 141.0
margin_right = 399.0
margin_bottom = 150.0
mouse_default_cursor_shape = 12
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="VBoxContainer/LabelHeader" to="." method="_on_LabelHeader_gui_input"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
